# master

./: json_file  json_file.json  link
BettingTips/app/: build.gradle  google-services.json
BettingTips/app/src/androidTest/java/com/pandurski/bettingtips/: ExampleInstrumentedTest.java
BettingTips/app/src/main/: AndroidManifest.xml
BettingTips/app/src/main/java/com/pandurski/bettingtips/: DatabaseUtils.java  IInitializeTxtView.java  InitializeTips.java  Prediction.java  todays_tips.java  yesterday_tips.java
BettingTips/app/src/main/res/drawable/: .directory
BettingTips/app/src/main/res/layout/: activity_todays_tips.xml  activity_yesterday_tips.xml
BettingTips/app/src/main/res/values/: colors.xml  strings.xml
BettingTips/app/src/test/java/com/pandurski/bettingtips/: ExampleUnitTest.java
BettingTips/gradle/wrapper/: gradle-wrapper.properties
BlackJackAlpha/app/src/main/res/drawable-ldpi/: .directory
BlackJackAlpha/app/src/main/res/layout-normal/: activity_black_jack.xml
DataStructures/: ArrayADT.cpp  DataStructures.pro  InfixToPostfix.cpp  InfixToPostfix.h  LinkedList.cpp  Stack.cpp  main.cpp
app/: build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/example/jsonapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jsonapp/: MainActivity.java  fetchData.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jsonapp/: ExampleUnitTest.java
build-DataStructures-Desktop_Qt_5_8_0_GCC_64bit-Debug/: DataStructures  Makefile
data_struct/: ArrayADT.cpp  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Node.h  Stack.cpp  avltreegenerator.cpp  avltreegenerator.h  binarytreegenerator.cpp  binarytreegenerator.h  graph.cpp  graph.h  hashing.cpp  hashing.h  main.cpp  menudriverprogramarrays.h  queue.cpp  queue.h  recursion.cpp  sorting.cpp  sorting.h
helloworld/: helloworld.sln  helloworld.vcxproj
helloworld/x64/Debug/: helloworld.exe.recipe  helloworld.ilk  helloworld.vcxproj.FileListAbsolute.txt  vc143.idb
helloworld/x64/Debug/helloworld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  helloworld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
modern_cpp/: modern_c++
openGL/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.h  Window.h  a.out  main.cpp
openGL/shaders/: shader.frag  shader.vert
openGL_win/: CMakeLists.txt  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
qt-core/: CMakeLists.txt  file.cpp  file.h  main.cpp  serialization.cpp  serialization.h  settings.cpp  settings.h  test.cpp  test.h
qt_console_vs/: main.cpp  qt_console_vs.sln  qt_console_vs.vcxproj
qt_console_vs/x64/Debug/: qt_console_vs.exe.recipe  qt_console_vs.ilk  qt_console_vs.vcxproj.FileListAbsolute.txt
qt_console_vs/x64/Debug/qmake/: qtvars_x64_Debug.props
qt_console_vs/x64/Debug/qmake/temp/: qtvars.vcxproj
qt_console_vs/x64/Debug/qt_console_vs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  qt_console_vs.lastbuildstate
vsc_helloworld/: main.cpp
